    network interfaces. Make sure a recent enough systemd version is installed
    by bumping the versioned Breaks accordingly. (Closes: #747044)
  * Order ifup@.service after networking.service so we don't need to setup the
    runtime directory ourselves and we have a defined point during boot when
    hotplugged network interfaces are started.

 -- Michael Biebl <biebl@debian.org>  Tue, 26 Aug 2014 12:09:10 +0200

systemd (214-1) experimental; urgency=medium

  * New upstream release v214.
   (Closes: #750793, #749268, #747939)

  [ Jon Severinsson ]
  * Import upstream v214-stable patch series.
    - Rebase remaining Debian patches on top of v214-stable.
    - Drop modifications to the now-removed built-in sysvinit support.
  * Install the new combined libsystemd0 library, this library combines all
    functionality of the various libsystemd-* libraries.
    - Deprecate the old libsystemd-* libraries as they've been bundled into
      libsystemd0. The old -dev files now just carry a transitional .pc file.
    - Add new symbols file for libsystemd0.
  * Update symbols file for libgudev-1.0-0.
  * Remove pre-generated rules and unit files in debian/rules clean target.
  * Add new systemd service users in systemd postinst (systemd-timesync,
    systemd-network, systemd-resolve)
  * Add new system group "input" used by udev rules in udev postinst.
  * Try-restart networkd, resolved, and timesyncd after an upgrade.
  * Do not force-enable default-on services on every upgrade.
  * Add support for rcS.d init scripts to the sysv-generator.
    - Do not order rcS.d services after local-fs.target if they do not
      explicitly depend on $local_fs.
    - Map rcS.d init script dependencies to their systemd equivalent.
    - Special-case some dependencies for sysv init scripts for better
      backwards compatibility. (Closes: #726027, #738965).
  * Add systemd depends on new mount. (Closes: #754411)
  * Update /run/initctl symlink target in debian/tmpfiles.d/debian.conf.